--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "description": "Northcoders News API Sprint",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha spec/index.spec.js",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "seed": "node seed/seed.dev.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "mongoose": "^5.0.14"
+    "mongoose": "^5.2.8"
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.0.5",
-    "supertest": "^3.0.0",
-    "nodemon": "^1.17.4"
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.3",
+    "supertest": "^3.1.0"
   }
 }
