--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha spec/index.spec.js",
     "start": "node index.js",
     "dev": "nodemon listen.js",
-    "seed": "node seed/seed.dev.js"
+    "seed": "node seed/seed.dev.js",
+    "seed:production": "NODE_ENV=production node ./seed/seed.dev.js"
   },
   "author": "",
   "license": "ISC",
